dev.out

> pivot-table-c@0.1.0 dev
> BABEL_OUTPUT=esm babel src --extensions ".ts,.tsx,.js,.jsx" --watch --copy-files --out-dir esm

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
SyntaxError: /opt/superset_roma/ptc/src/plugin/pivotTable.ts: Unexpected token, expected "," (17:9)

  15 |   )
  16 |   return (
> 17 |     <div ref={dragRef} style={{ opacity }}>
     |          ^
  18 |       {text}
  19 |     </div>
  20 |   )
    at Parser._raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:569:17)
    at Parser.raiseWithData (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:562:17)
    at Parser.raise (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:523:17)
    at Parser.unexpected (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:3601:16)
    at Parser.expect (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:3575:28)
    at Parser.tsParseDelimitedListWorker (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7929:14)
    at Parser.tsParseDelimitedList (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7898:25)
    at Parser.tsParseBracketedList (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:7951:25)
    at Parser.tsParseTypeParameters (/opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:8063:24)
    at /opt/superset_roma/ptc/node_modules/@babel/parser/lib/index.js:9913:29 {
  loc: Position { line: 17, column: 9 },
  pos: 341,
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'UnexpectedToken'
}
Successfully compiled 18 files with Babel (4301ms).
Successfully compiled 1 file with Babel (254ms).
Successfully compiled 1 file with Babel (168ms).
Successfully compiled 1 file with Babel (137ms).
Successfully compiled 1 file with Babel (136ms).
Successfully compiled 1 file with Babel (134ms).
Successfully compiled 1 file with Babel (168ms).
Successfully compiled 1 file with Babel (151ms).
Successfully compiled 1 file with Babel (118ms).
Successfully compiled 1 file with Babel (118ms).
Successfully compiled 1 file with Babel (117ms).
Successfully compiled 1 file with Babel (116ms).
Successfully compiled 1 file with Babel (138ms).
Successfully compiled 1 file with Babel (133ms).
Successfully compiled 1 file with Babel (142ms).
Successfully compiled 1 file with Babel (126ms).
Successfully compiled 1 file with Babel (126ms).
Successfully compiled 1 file with Babel (132ms).
Successfully compiled 1 file with Babel (125ms).
Successfully compiled 1 file with Babel (149ms).
Successfully compiled 1 file with Babel (157ms).
Successfully compiled 1 file with Babel (149ms).
Successfully compiled 1 file with Babel (110ms).
Successfully compiled 1 file with Babel (144ms).
Successfully compiled 1 file with Babel (135ms).
Successfully compiled 1 file with Babel (153ms).
Successfully compiled 1 file with Babel (119ms).
Successfully compiled 1 file with Babel (125ms).
Successfully compiled 1 file with Babel (115ms).
Successfully compiled 1 file with Babel (119ms).
Successfully compiled 1 file with Babel (126ms).
Successfully compiled 1 file with Babel (152ms).
Successfully compiled 1 file with Babel (115ms).
Successfully compiled 1 file with Babel (144ms).
Successfully compiled 1 file with Babel (151ms).
Successfully compiled 1 file with Babel (125ms).
Successfully compiled 1 file with Babel (193ms).
Successfully compiled 1 file with Babel (171ms).
Successfully compiled 1 file with Babel (129ms).
Successfully compiled 1 file with Babel (136ms).
Successfully compiled 1 file with Babel (118ms).
Successfully compiled 1 file with Babel (121ms).
Successfully compiled 1 file with Babel (123ms).
Successfully compiled 1 file with Babel (118ms).
Successfully compiled 1 file with Babel (116ms).
Successfully compiled 1 file with Babel (126ms).
Successfully compiled 1 file with Babel (115ms).
Successfully compiled 1 file with Babel (114ms).
